更改仓库名

--- a/docs/面试题/待归档面试题.md
+++ b/docs/面试题/待归档面试题.md
@@ -1,4 +1,16 @@
-# 2023面试题整理
+# 待归档面试题
+
+ **JavaScript 基础**，ES6语法、垃圾回收与内存泄漏等。
+
+**网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、DNS解析、CDN缓存等。
+
+**HTML和CSS**，这块被问的内容比较少，重点从布局入手，比如单位、盒模型、定位、响应式布局等知识点。
+
+**前端框架**，框架的底层原理是一定会问的，至少要深入掌握一个前端框架。目前业界内比较流行的框架是 React 和 Vue，React 的知识点有 React diff、生命周期、Fiber 架构、Hooks 等；Vue 的知识点有Vue diff、响应式原理、Vue3.0新特性等。
+
+**打包工具**，主要围绕Webpack展开，比如loader和plugin原理、webpack构建流程、热更新原理、性能优化等。除此以外，打包界的新宠esbuild也可以了解下。
+
+**加分项**，除了JavaScript外，还了解哪些编程语言
 
 ## CSS换行
 
