--- a/docs/面试题/待归档面试题.md
+++ b/docs/面试题/待归档面试题.md
@@ -2,7 +2,7 @@
 
  **JavaScript 基础**，ES6语法、垃圾回收与内存泄漏等。
 
-**网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、DNS解析、CDN缓存等。
+**网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、CDN缓存等。
 
 **HTML和CSS**，这块被问的内容比较少，重点从布局入手，比如单位、盒模型、定位、响应式布局等知识点。
 
