--- a/docs/其他/待归档.md
+++ b/docs/其他/待归档.md
@@ -1,6 +1,6 @@
 # 待归档
 
- **JavaScript 基础**，ES6语法、垃圾回收与内存泄漏等。生命周期 script标签 前端模块化整理归档目录
+ **JavaScript 基础**，ES6语法、 script标签 前端模块化整理归档目录
 
 **网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、CDN缓存等。
 
