--- a/docs/其他/待归档.md
+++ b/docs/其他/待归档.md
@@ -1,8 +1,170 @@
 # 待归档
+https://mp.weixin.qq.com/s/jfKk-OpO1re32A2TUN8uqw
 
+https://mp.weixin.qq.com/s/B-VpVYsKse4SmA6_eH0jLA
+https://mp.weixin.qq.com/s/3nCEeiFD9PVBheT_Wik6wQ
+https://mp.weixin.qq.com/s/g_5p-YSIzDtMSjGm5-metA
+https://mp.weixin.qq.com/s/h4-66qQlF_O70TOmBmA-RA
+https://mp.weixin.qq.com/s/pFN0Bo8N6QBhr52qG4SVlg
+https://mp.weixin.qq.com/s/GtY001BjlwT9g2FxwkH9Fg
+https://mp.weixin.qq.com/s/hSgbwT4rc_vduZyX9cMggA
+https://mp.weixin.qq.com/s/RsQLnSNNxpk1VChqVTAHZA
+https://mp.weixin.qq.com/s/DqcbAFUe_WSj4-YhkWpFpQ
+https://mp.weixin.qq.com/s/wUn0bZ2qJjJ2FCwbWEQvWQ
+https://mp.weixin.qq.com/s/ANQB_XaKpZ1d-A62WXDdtQ
+https://mp.weixin.qq.com/s/1nmyrqoUdzkDApDnERAOaA
+https://mp.weixin.qq.com/s/GSW93NDhogiYOZ9gIm9nSA
+https://mp.weixin.qq.com/s/FsM6jTPuci5_eIiYo9KiTw
+https://mp.weixin.qq.com/s/unLYUhqGVHS8_nudEdFw0w
+https://mp.weixin.qq.com/s/c3NsAxIWZhLEe-HwinIs6w
+https://mp.weixin.qq.com/s/XHZ5DpEMpd37JkDSJ0FxDA
+https://mp.weixin.qq.com/s/qrgSvnALdegRgtG3HBU36g
+https://mp.weixin.qq.com/s/pRvGXD3AbGlOVA8OpxC18g
+https://mp.weixin.qq.com/s/UoYUpCBn7m309PtYcVdafw
+https://mp.weixin.qq.com/s/AYdMULe2_Y6KtCO2MlGC0g
+https://mp.weixin.qq.com/s/hISyBCvjtwX-ZbJ_WCUeGg
+https://mp.weixin.qq.com/s/HZ9N0dFhUmyTF0GVrn2pjA
+https://mp.weixin.qq.com/s/I9277SurJLp6aa2cewFOBg
+https://mp.weixin.qq.com/s/sno09eMaVFhrE7QXmv8ySg
+https://mp.weixin.qq.com/s/dZVcJROUdJOWGkAkEBaBzg
+https://mp.weixin.qq.com/s/GbSNPeDhllfsSP6y1LIdNg
+https://mp.weixin.qq.com/s/SvpQtzZNfzIrORCIlYflmw
+https://mp.weixin.qq.com/s/LI7D3ZUrC385p5LMfR3ouQ
+https://mp.weixin.qq.com/s/bF6pDnhmK7NJwfUmo7CAZA
+https://mp.weixin.qq.com/s/6mlv6_ClRTW36cgdBiY9Cw
+https://mp.weixin.qq.com/s/GekGovHyuaY0Bpi4BA6RPw
+https://mp.weixin.qq.com/s/lHYkY-BOnxl8URY6-o57FA
+https://mp.weixin.qq.com/s/kdpE-zW1ByssMGnQJawsUA
+https://mp.weixin.qq.com/s/L381U-XszdhV-L3Is5fGog
+https://mp.weixin.qq.com/s/MbLFyGZyTzRUKUacoG70Gg
+https://mp.weixin.qq.com/s/JwyXcyB6o04fiQtlM3V16A
+https://mp.weixin.qq.com/s/ET0GpYungWyfEteIA2zvLQ
+https://mp.weixin.qq.com/s/0wevn5cZ6J4jNmmO-ZspGw
+https://mp.weixin.qq.com/s/-rNjZnRvrJ4uR0HTR4jikw
+https://mp.weixin.qq.com/s/MYbdZ6gqWaRSSaDhtR0GWA
+https://mp.weixin.qq.com/s/7hT8oyK1m21tQcxbruQYbA
+https://mp.weixin.qq.com/s/qH9I4hsY9hwPSqYRk_vYiA
+https://mp.weixin.qq.com/s/cJPv0niRXhEFqv4-KN5GBw
+https://mp.weixin.qq.com/s/2QSNcyScehZlHQbdA0Aurg
+https://mp.weixin.qq.com/s/s0xTsa_jUmkIeKcEoM5B8w
+https://mp.weixin.qq.com/s/J9IEJAKutu1ujJWSjnXeFg
+https://mp.weixin.qq.com/s/IjsaFKKAfiqKbNb7z5bWNg
+https://mp.weixin.qq.com/s/SUmvTan2uOJcVVRnPYwmqA
+https://mp.weixin.qq.com/s/SakGTNlckP9vVh49KwRNHw
+https://mp.weixin.qq.com/s/OAM_npB2e1qs7UCUCtCzsg
+https://mp.weixin.qq.com/s/c74eiXhuEWBpjiRUtKmbEA
+https://mp.weixin.qq.com/s/FR_ZMc6flFV-7o2XAmpW6Q
+https://mp.weixin.qq.com/s/M0Xt2upAM8-Eb4en7Z2kUw
+https://mp.weixin.qq.com/s/MYxAjzY3IrLnMkGh515AkQ
+https://mp.weixin.qq.com/s/_WkA1Ta_2LSx8PAXUu1cKA
+https://mp.weixin.qq.com/s/oefFOVf1H0La6mOMIfUMUg
+https://mp.weixin.qq.com/s/zLFIh_RhjTb7PY2_d3VRGw
+https://mp.weixin.qq.com/s/TvFI7otbHIbADEH-qY2mAQ
+https://mp.weixin.qq.com/s/U4j9EuHJlHApII6_fzMrHw
+https://mp.weixin.qq.com/s/99ZDsxm553Dac48RUoj4BQ
+https://mp.weixin.qq.com/s/v2wsNSiSRT7_fic9NStzXA
+https://mp.weixin.qq.com/s/hrqFVWh1AAd3TEMk_JQtNA
+https://mp.weixin.qq.com/s/iDuEdt6Ut5TZ4iHt1Q2BrA
+https://mp.weixin.qq.com/s/SqHTWwbepjjZ42jNi1-uGw
+https://mp.weixin.qq.com/s/CBXN6udTy9MjpNecxEAVtQ
+https://mp.weixin.qq.com/s/6nEByptTolvkSGWhten3Tw
+https://mp.weixin.qq.com/s/I6nGwXTPtl-jy2t0cVQ_4A
+https://mp.weixin.qq.com/s/AwkbekrWFQTsGB9wXdFBGw
+https://mp.weixin.qq.com/s/j_yrBI_AvZyP6QAB7YKTvQ
+https://mp.weixin.qq.com/s/Ylv4mFApxxcyJHFl7OpdLA
+https://mp.weixin.qq.com/s/gafFKEDrk6gqCSFYDujSkQ
+https://mp.weixin.qq.com/s/zcipIsZvw3XEQLAyi4Kifg
+https://mp.weixin.qq.com/s/lzE7WiKNDADlpcmRjrsfYA
+https://mp.weixin.qq.com/s/IvvCYfFjuOCAC9ts_jSK_g
+https://mp.weixin.qq.com/s/MwSSF8QjITJanUfAM8Z_BA
+https://mp.weixin.qq.com/s/y3pVJpM-Bpg5VykEyjj-LQ
+https://mp.weixin.qq.com/s/iWbyn6FhilwIPGYeGC3LkQ
+https://mp.weixin.qq.com/s/dbUR2zg0qA0lV0CsGwk-ag
+https://mp.weixin.qq.com/s/0MwZoBbzr64Yg-v_vR3BwQ
+https://mp.weixin.qq.com/s/0bzsHVqxoyl9uth3iymp0A
+https://mp.weixin.qq.com/s/WgtaO-P9spM0IZfU1JtJTQ
+https://mp.weixin.qq.com/s/MrX6P4LEIJL5kZdV0bK26g
+https://mp.weixin.qq.com/s/K3WFuPHH7nKR1c3pycr7MQ
+https://mp.weixin.qq.com/s/y8FXNDFQ_K6FF5Ne9IOjpg
+https://mp.weixin.qq.com/s/yhZ2qYWDa96zejOHFqvMwQ
+https://mp.weixin.qq.com/s/ZvjWusFwRo096K9Bc89bxA
+https://mp.weixin.qq.com/s/jaX5aVPrHxv75soFbnfq5A
+https://mp.weixin.qq.com/s/s4mGvONAs-2BhPEcUOI7Wg
+https://mp.weixin.qq.com/s/HmWOGaimis0yu884LhoZMQ
+https://mp.weixin.qq.com/s/m9vtDyodB6gszH3xD70HTQ
+https://mp.weixin.qq.com/s/G4rJkjIVkIbSMrCtA4hHDA
+https://mp.weixin.qq.com/s/KhuoP31HYpzcngcKY9MhpA
+https://mp.weixin.qq.com/s/McE8DcyapQgHQDNamoF7gQ
+https://mp.weixin.qq.com/s/aF7nrGOlaxNryJX0ts7pmw
+https://mp.weixin.qq.com/s/mGA654VziYVKkKZZF2R8yA
+https://mp.weixin.qq.com/s/1j35I48ZyqR5bWAzOdWJcQ
+https://mp.weixin.qq.com/s/mbWMaZ2PHJe0HEr9YWDTrQ
+https://mp.weixin.qq.com/s/wwK0vf3mjzuq_nDTSwRciw
+https://mp.weixin.qq.com/s/XMtCUBdNhpIjZZduXJuZtg
+https://mp.weixin.qq.com/s/hLTnbRItiaNwX_1sCIxPJA
+https://mp.weixin.qq.com/s/w_kr399RQUfFH2JVrvT_3w
+https://mp.weixin.qq.com/s/R9tRwHk9erUypyo3xAfumA
+https://mp.weixin.qq.com/s/2ON_7DWO9Dy8jbTcQlgZwA
+https://mp.weixin.qq.com/s/c0pYoLaFsUR44l6TsZAZlQ
+https://mp.weixin.qq.com/s/a-qqUzyClY9Binwsk2-Ltw
+https://mp.weixin.qq.com/s/JKyTE4g6U7LMe-rRxZW1fg
+https://mp.weixin.qq.com/s/Q1V9qBAx-nJcIvgNogZmbw
+https://mp.weixin.qq.com/s/oAg7ElPQ4n1oQmorWyR9Rw
+https://mp.weixin.qq.com/s/83xBrZc1oz4vRxClz0789Q
+https://mp.weixin.qq.com/s/xowqcPvZ9TgBbIa6qgz41A
+https://mp.weixin.qq.com/s/6CBI3GcPQVi9WQRhII384w
+https://mp.weixin.qq.com/s/pdvkq2Y4b9JwJxWR3gKpxw
+https://mp.weixin.qq.com/s/CZAWkARhvvoMa2Zk8Uv2Lg
+https://mp.weixin.qq.com/s/ob06V6ChPwOFUqabQSPv5A
+https://mp.weixin.qq.com/s/L3WWPQPCxwCcOHGL9P-4zg
+https://mp.weixin.qq.com/s/oDR7AAHXSgackL2IR6pUFw
+https://mp.weixin.qq.com/s/8c-NGNhCHbYVlQNd2Fxy-Q
+https://mp.weixin.qq.com/s/hhrCgCDPmzm_CHLHEYh7bw
+https://mp.weixin.qq.com/s/5ImT54MaPon8S0XPe1KXcw
+https://mp.weixin.qq.com/s/SiULe7HVNbvxaa0LtlITPg
+https://mp.weixin.qq.com/s/kqWijzNHuiTZ4FD2WKRF5Q
+https://mp.weixin.qq.com/s/e3haMV9nMvxWCTCGCvuHdg
+https://mp.weixin.qq.com/s/Il2th79CYuRQIPJtHItZKA
+https://mp.weixin.qq.com/s/QeWrIxROU5dQ6tChnQM6SA
+https://mp.weixin.qq.com/s/J2cPSPVDDyR9nJ2AdazF7Q
+https://mp.weixin.qq.com/s/AYfHnorRQf94bQxm-uOhgw
+https://mp.weixin.qq.com/s/GB9-j9rDK6k_zDosiIMLyA
+https://mp.weixin.qq.com/s/MetC4UWf3Zmj1wAAv6_yAw
+https://mp.weixin.qq.com/s/4kkjju0NAVaUl9tWFddGPQ
+https://mp.weixin.qq.com/s/dDLy1PH8ga30k8728ixICQ
+https://mp.weixin.qq.com/s/aGQ-mN9qMEixOCHwNirveQ
+https://mp.weixin.qq.com/s/mbxniBFRZbq7wIGaxuzFOA
+https://mp.weixin.qq.com/s/6KsYgRV7ajhGv8X6BzJTow
+https://mp.weixin.qq.com/s/kuDo7t9EN5O3bHpBp6Gs_g
+https://mp.weixin.qq.com/s/OJ6QhI0pL159XbuFVes-TA
+https://mp.weixin.qq.com/s/GH_GrE4cRC4tw3yNpJ8zoA
+https://mp.weixin.qq.com/s/ZdkIoOZh-6l2epSWheru4w
+https://mp.weixin.qq.com/s/1oyOJLy0in5nIj_x0w3A2A
+https://mp.weixin.qq.com/s/UhiRC8pHftF0IA-7L3TOIg
+https://mp.weixin.qq.com/s/uclQHSFpFBRDU3gp9n9FTw
+https://mp.weixin.qq.com/s/j4hvUNL70s93OC3o293gDw
+https://mp.weixin.qq.com/s/qZAiTWLKtq0qzc1xSQxCqA
+https://mp.weixin.qq.com/s/8xd_Bh-7H77WD-apYodkJw
+https://mp.weixin.qq.com/s/25G8QA3Gjf6ZaVgfWhk7cA
+https://mp.weixin.qq.com/s/B1bbkXqCsU2rZEiyhhuyOg
+https://mp.weixin.qq.com/s/TOo59NqAExwXFeUvzQBEXA
+https://mp.weixin.qq.com/s/P-s-xdRXVrABMuDTHji7ow
+https://mp.weixin.qq.com/s/NOlJv-OahbDYwdJmoTdvDw
+https://mp.weixin.qq.com/s/Iw0aNjSzDRRqhUy8yQHdnA
+https://mp.weixin.qq.com/s/I5I0P4hEIev4nYT-tcuGug
+https://mp.weixin.qq.com/s/35SlY5DjI2C4xAdTwy_nKg
+https://mp.weixin.qq.com/s/QaFIfNS5NRFgRZuEc8pdrA
+https://mp.weixin.qq.com/s/56QLZx-aJsIpZvzn4qnkRA
+https://mp.weixin.qq.com/s/LzOWUkx66qPYCiNLYBrR7w
+https://mp.weixin.qq.com/s/pWsntJbJnBip5CbP7HkvFg
+https://mp.weixin.qq.com/s/Kbz6FHTimK1FfXCWYl2lhw
+https://mp.weixin.qq.com/s/feT6wZ3y9L20mG5NFBHb-Q
+https://mp.weixin.qq.com/s/NhZnPdN1eBt7PtEj5m0dIQ
+https://mp.weixin.qq.com/s/OBb0zrfGAI6w4ILvT5T5-A
+https://mp.weixin.qq.com/s/CjSXdns1URlJ8Yztk0vbtw
  **JavaScript 基础**，ES6语法、 script标签 前端模块化整理归档目录
 
-**网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、CDN缓存等。
+**网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、CDN缓存等。简述下 TLS 握手过程
 
 **HTML和CSS**，这块被问的内容比较少，重点从布局入手，比如单位、盒模型、定位、响应式布局等知识点。
 
