--- a/docs/其他/待归档.md
+++ b/docs/其他/待归档.md
@@ -1,20 +1,5 @@
 # 待归档
 
-https://mp.weixin.qq.com/s/jfKk-OpO1re32A2TUN8uqw
-
-
-https://mp.weixin.qq.com/s/B-VpVYsKse4SmA6_eH0jLA
-
-https://mp.weixin.qq.com/s/3nCEeiFD9PVBheT_Wik6wQ
-
-https://mp.weixin.qq.com/s/g_5p-YSIzDtMSjGm5-metA
-
-https://mp.weixin.qq.com/s/h4-66qQlF_O70TOmBmA-RA
-
-https://mp.weixin.qq.com/s/pFN0Bo8N6QBhr52qG4SVlg
-
-https://mp.weixin.qq.com/s/GtY001BjlwT9g2FxwkH9Fg
-
 https://mp.weixin.qq.com/s/hSgbwT4rc_vduZyX9cMggA
 
 https://mp.weixin.qq.com/s/RsQLnSNNxpk1VChqVTAHZA
@@ -325,9 +310,9 @@ https://mp.weixin.qq.com/s/OBb0zrfGAI6w4ILvT5T5-A
 
 https://mp.weixin.qq.com/s/CjSXdns1URlJ8Yztk0vbtw
  **JavaScript 基础**，ES6语法、 script标签 前端模块化整理归档目录
-
+echarts动画实现原理    了解canvas吗  如何实现组件滑动切换效果  对语义化的理解  HTML5有哪些语义化标签
 **网络通信**，重点有浏览器缓存、Http2.0、Https通信过程、TCP与UDP、CDN缓存等。简述下 TLS 握手过程
-
+px转其他单位  vue-router两种模式下如何实现的url到组件的映射
 **HTML和CSS**，这块被问的内容比较少，重点从布局入手，比如单位、盒模型、定位、响应式布局等知识点。
 
 **前端框架**，框架的底层原理是一定会问的，至少要深入掌握一个前端框架。目前业界内比较流行的框架是 React 和 Vue，React 的知识点有 React diff、生命周期、Fiber 架构、Hooks 等；Vue 的知识点有Vue diff、响应式原理、Vue3.0新特性等。
