排版顺序与逻辑位置

--- a/docs/CSS/排版顺序与逻辑位置.md
+++ b/docs/CSS/排版顺序与逻辑位置.md
@@ -204,12 +204,12 @@ div:hover {
 
 #### `border` 
 
-| Property 属性                      | Logical Property 逻辑属性                |
-| ---------------------------------- | ---------------------------------------- |
-| border-top{-size\|style\|color}    | border-block-start{-size\|style\|color}  |
-| border-left{-size\|style\|color}   | border-inline-start{-size\|style\|color} |
-| border-right{-size\|style\|color}  | border-inline-end{-size\|style\|color}   |
-| border-bottom{-size\|style\|color} | border-block-end{-size\|style\|color}    |
+| Property 属性 | Logical Property 逻辑属性 |
+| ------------- | ------------------------- |
+| border-top    | border-block-start        |
+| border-left   | border-inline-start       |
+| border-right  | border-inline-end         |
+| border-bottom | border-block-end          |
 
 #### `relative` 
 
