--- a/docs/性能&网络/节流防抖.md
+++ b/docs/性能&网络/节流防抖.md
@@ -127,3 +127,29 @@
         };
     }
     ```
+
+## CSS节流
+
+CSS 实现和 JS 的思维不同，这种场景可以理解成是**对 CSS 动画的控制**，比如有一个动画控制按钮从**禁用**->**可点击**的变化，每次点击时让这个动画重新执行一遍，在执行的过程中，一直处于**禁用**状态，是不是就达到了“节流”的效果了
+
+```css
+button{
+  animation: throttle 2s step-end forwards;
+}
+button:active{
+  animation: none;
+}
+@keyframes throttle {
+  from {
+    pointer-events: none;
+  }
+  to {
+    pointer-events: all;
+  }
+}
+```
+
+
+
+
+
