--- a/docs/JavaScript/JS基础/数据类型.md
+++ b/docs/JavaScript/JS基础/数据类型.md
@@ -1,12 +1,15 @@
-## 数据类型分类
+# 数据类型分类
 
-### 基本数据类型
+## 数据类型
 
-共分为以下六种：number,string,boolean,symbol,null,undifined
-
-### 引用数据类型
-
-共分为以下几种：object,array,function
+- number
+- string
+- boolean
+- null
+- undefined
+- object
+- symbol
+- bigint
 
 ## 对象
 
