--- a/docs/命令行/命令行.md
+++ b/docs/命令行/命令行.md
@@ -17,7 +17,7 @@
 
 命令行界面是图形界面（GUI）普及之前最为广泛的用户界面，如下图就是命令行界面，需要用户一行一行输入命令和计算机交互
 
-![图0：命令行界面 (CLI)、终端 (Terminal)、Shell、TTY，傻傻分不清楚？](http://www.techug.com/wordpress/wp-content/uploads/2018/09/the_matrix_screenshot-1000x607.jpg)
+![图0：命令行](http://www.techug.com/wordpress/wp-content/uploads/2018/09/the_matrix_screenshot-1000x607.jpg)
 
 在GUI普及后，用户在日常使用中几乎都是使用鼠标点击即可，大多操作都不需要手动输入命令，然而在熟记命令的前提下，使用命令行界面往往要更有效率，例如批量修改文件名，图形界面需要逐个修改或者下载三方软件，而命令行界面只需要运行一行指令
 
@@ -29,9 +29,9 @@ rename 's/\.tpl$/\.blade.php/' ./**/*.tpl
 
 ### 终端(`Terminal`)
 
-终端是用户与计算机之间的桥接设备，具备文本输入界面，最初的终端是物理设备，现代终端通常指软件模拟的应用程序
+早期的计算机造价昂贵切体积较大，通常会被放置在单独的房间中，操作计算机的人在其他房间可以通过终端与计算机交互。终端就是这样输入数据和输出结果的设备，本身并不提供运算处理能力。
 
-> 早期的计算机造价昂贵切体积较大，通常会被放置在单独的房间中，操作计算机的人在其他房间可以通过终端与计算机交互。终端就是这样可以输入数据和输出结果的设备，本身并不提供运算处理能力。
+最初的终端是物理设备，现代终端通常指 **终端模拟器 (`Terminal Emulator`)** 应用程序
 
 
 
@@ -41,7 +41,7 @@ rename 's/\.tpl$/\.blade.php/' ./**/*.tpl
 
 顾名思义，控制台是用于管理主机的，比普通终端的权限更大，一台计算机可以链接多个终端，但只有一个控制台。
 
-现代控制台与终端的概念已逐渐模糊，可以认为键盘显示器就是控制台或者终端，它们可以当控制台管理系统，也可以当作终端做一般的工作
+现代控制台与终端的概念已逐渐模糊， Console 与 Terminal 基本被看作是同义词，可以认为键盘显示器就是控制台或者终端，它们可以当控制台管理系统，也可以当终端做一般的工作
 
 
 
